<resources>
    <string name="app_name">My Application</string>
    <string name="app_title">Tic Tac Toe</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player1_name">Player1 Enter your name....</string>
    <string name="player2_name">Player2 Enter your nam....</string>
    <string name="start_game">Start Game </string>
    <string name="play_again">Play Again</string>
    <string name="Home">Home</string>
</resources>
